--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <input id="Password" type="password" name="senha">
         <span class="error" id="ErrorPassword"></span>
       </label>
-
+      <span class="error" id="ErrorAPI"></span>
       <button type="submit">Acessar</button>
 
     </form>
