--- a/signup.html
+++ b/signup.html
@@ -53,6 +53,8 @@
         <span class="error" id="ErrorRepeatPassword"></span>
       </label>
 
+      <span class="error" id="ErrorAPI"></span>
+
       <button type="submit">Criar conta</button>
 
     </form>
